# advanced-data-warehouse-and-database-management-systems-submission

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
api/: Dockerfile  main.py  pyproject.toml  requirements.txt
database/init/: 001_create_schemas.sql  002_create_oltp_tables.sql  003_create_dw_tables.sql  004_create_indexes.sql  005_seed_parameters.sql  (+1 more)
diagrams/: README.md  data_flow.mmd  deployment_architecture.mmd  dw_star_schema.mmd  system_architecture.mmd
docs/: 00-master-plan.md  01-context-registry.md  02-implementation-plan.md  03-indexing-and-partitioning.md  04-backup-and-maintenance.md  05-hetzner-access-and-deployment.md
frontend/: Dockerfile  Home.py  api_client.py  app.py  dashboard_support.py  pyproject.toml
frontend/pages/: 1_Air_Quality_Overview.py  1_Station_Explorer.py  2_Station_Explorer.py  2_Threshold_Management.py  3_Alerts.py  3_High_Risk_Periods.py  4_System_Status.py  5_Air_Quality_Overview.py  6_High_Risk_Periods.py  7_Prediction_Insights.py  8_Data_Operations.py
reverse-proxy/: Caddyfile
scripts/: air_quality_backup.crontab  air_quality_pipeline.crontab  backup_db.sh  deploy_stack.sh  run_pipeline.sh
tests/: test_api.py  test_backup_script.py  test_etl.py  test_ingest_transactions.py  test_run_pipeline.py  test_scaffold.py  test_train_model.py  verify_dw_etl.sql  verify_dw_scd2.sql  verify_dw_schema.sql  verify_oltp_schema.sql  verify_partitioning_and_indexes.sql
workers/: Dockerfile  etl.py  ingest.py  predict.py  pyproject.toml  requirements.txt  train_model.py
(+9 files in other folders)
