[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "air-quality-api"
version = "0.1.0"
description = "FastAPI backend for the Air Quality Intelligence System."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "psycopg[binary]==3.2.3",
    "pydantic-settings==2.7.1",
]

[tool.setuptools]
py-modules = ["main"]
