[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "air-quality-workers"
version = "0.1.0"
description = "Ingestion, ETL, training, and prediction workers for the Air Quality Intelligence System."
requires-python = ">=3.12"
dependencies = [
    "requests==2.32.3",
    "psycopg[binary]==3.2.3",
    "pandas==2.2.3",
    "scikit-learn==1.6.0",
    "python-dotenv==1.0.1",
]

[tool.setuptools]
py-modules = ["ingest", "etl", "train_model", "predict"]
